# kakei

./: CONTRIBUTING.md  Cargo.toml  README.md  build.rs  config.toml.example  example-config.toml  flake.nix  rust-toolchain.toml
.cargo/: config.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: 01_bug_report.yml  02_feature_request.yml  bug_report.md  config.yml  feature_request.md
.github/workflows/: deploy-docs.yml  rust-checker.yml  rust-ci.yml  stale-issues-pullrequests.yml
book/src/: SUMMARY.md  architecture.md  commands.md  configuration.md  configuration.md#database-location  contributing.md  contributing.md#how-to-build-locally  contributing.md#preview-documentation  data-format.md  data-format.md#table-structure  data-format.md#transaction-structure  development.md  examples.md  examples.md#analyzing-spending-patterns  examples.md#monthly-budget-tracking  installation.md  installation.md#install-via-nix  installation.md#platform-notes  introduction.md  lisp-functions.md  lisp-functions.md#association-list-functions  lisp-functions.md#comparison-functions  lisp-functions.md#table-manipulation  quick-start.md  quick-start.md#add-transactions  quick-start.md#initialize-database  quick-start.md#list-transactions  quick-start.md#transform-with-lisp
crates/cli/: Cargo.toml  README.md
crates/cli/src/: cli.rs  main.rs  prelude.rs
crates/database/: Cargo.toml
crates/parser/: Cargo.toml
crates/parser/src/: lib.rs
crates/processor/: Cargo.toml  README.md
crates/processor/crates/database/: Cargo.toml  build.rs
crates/processor/crates/database/db/migrations/: 20251116085108_0001_create_initial_tables.down.sql  20251116085108_0001_create_initial_tables.up.sql
crates/processor/crates/database/src/: dto.rs  error.rs  lib.rs  models.rs  repository.rs  types.rs
crates/processor/crates/database/tests/: repository_test.rs
crates/processor/crates/klisp/: Cargo.toml  README.md
crates/processor/crates/klisp/src/: builtins.rs  evaluator.rs  lib.rs  parser.rs  value.rs  whitespace.rs
crates/processor/crates/klisp/src/evaluator/: builtins.rs  eval.rs  evaluator.rs  mod.rs  value.rs
crates/processor/crates/klisp/src/parser/: ast.rs  parse.rs  whitespace.rs
crates/processor/crates/klisp/tests/: evaluator_tests.rs  parser_tests.rs
crates/processor/crates/money/: Cargo.toml
crates/processor/crates/money/src/: errors.rs  lib.rs  types.rs
crates/processor/src/: currency.rs  lib.rs  prelude.rs  table_transform.rs  types.rs
crates/processor/src/types/: configuration.rs  currency.rs  note.rs  processor.rs
crates/processor/src/types/note/: calculated.rs  raw.rs  result.rs
crates/processor/tests/: integration_tests.rs
crates/types/: Cargo.toml
crates/types/src/: currency.rs  lib.rs  query.rs
crates/xtask/: Cargo.toml
crates/xtask/src/: builder.rs  main.rs
docs/: I18N.md  README.md
docs/book/: .gitignore  README.md  book.toml
docs/book/src/: SUMMARY.md  architecture.md  commands.md  configuration.md  contributing.md  data-format.md  development.md  examples.md  installation.md  lisp-functions.md  quick-start.md
docs/book/src/commands/: add.md  init.md  list.md  transform.md
docs/book/src/configuration/: configuration-file.md  database-location.md
docs/book/src/contributing/: how-to-build-locally.md  preview-documentation.md  submitting-pull-requests.md
docs/book/src/data-format/: table-structure.md  transaction-structure.md
docs/book/src/development/: building.md  linting.md  running-tests.md
docs/book/src/examples/: analyzing-spending-patterns.md  monthly-budget-tracking.md
docs/book/src/installation/: binary-releases.md  build-from-source.md  install-via-cargo.md  install-via-nix.md  platform-notes.md  prerequisites.md
docs/book/src/lisp-functions/: association-list-functions.md  comparison-functions.md  core-functions.md  list-operations.md  table-manipulation.md
docs/book/src/quick-start/: add-transactions.md  initialize-database.md  list-transactions.md  transform-with-lisp.md
examples/list-transformations/: README.md  group-by-account.kakei  group-by-category.kakei
locales/: en.yml  ja.yml
src/: cli.rs  commands.rs  configs.rs  data.rs  editor.rs  lib.rs  main.rs
tests/: cli_integration_tests.rs  example_config_test.rs
