[workspace]
resolver = "3"
members = ["crates/cli", "crates/processor"]

[workspace.package]
authors = ["haruki7049 <tontonkirikiri@gmail.com>"]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/haruki7049/kakei"
publish = false
readme = "README.md"

[workspace.dependencies]
anyhow = "1.0.102"
clap = { version = "4.4.11", features = ["derive", "string"] }
confy = "0.6.1"
directories = "6.0.0"
thiserror = "2.0.17"
