[package]
name = "kakei"
description = "A kakeibo cli application"
keywords = ["editor", "kakeibo"]
categories = ["command-line-utilities"]
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true
readme.workspace = true

[dependencies]
clap.workspace = true
anyhow.workspace = true
thiserror.workspace = true
