[package]
name = "kakei"
description = "Kakeibo CLI application"
keywords = ["editor", "kakeibo"]
categories = ["command-line-utilities"]
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true
readme.workspace = true

[dependencies]
kakei_processor.workspace = true
anyhow.workspace = true
clap.workspace = true
confy.workspace = true
directories.workspace = true
tabled.workspace = true
thiserror.workspace = true
