[package]
name = "kakei_parser"
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true
readme.workspace = true

[dependencies]
kakei_types.workspace = true
chumsky.workspace = true
thiserror.workspace = true

[dev-dependencies]
anyhow.workspace = true
