[package]
name = "processor"
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true
readme.workspace = true

[dependencies]
kakei_database.workspace = true
kakei_money.workspace = true
chrono.workspace = true
tokio.workspace = true
thiserror.workspace = true
rust_decimal.workspace = true
