[package]
name = "kakei_types"
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true
readme.workspace = true

[dependencies]
tabled.workspace = true
thiserror.workspace = true

[dev-dependencies]
anyhow.workspace = true
