[package]
name = "kakei_money"
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true
readme.workspace = true

[dependencies]
rust_decimal.workspace = true
thiserror.workspace = true
serde = { workspace = true, optional = true }

[features]
default = []
serde = ["dep:serde", "rust_decimal/serde"]
